devel
-----

* Added startup option `--foxx.force-update-on-startup` to toggle waiting 
  for all Foxx services in all databases to be propagated to a coordinator 
  before it completes the boot sequence. 
  In case the option is set to `false` (i.e. no waiting), the coordinator 
  will complete the boot sequence faster, and the Foxx services will be 
  propagated lazily. Until the initialization procedure has completed for
  the local Foxx apps, any request to a Foxx app will be responded to with
  an HTTP 503 error and message 

    waiting for initialization of Foxx services in this database 

  This can cause an unavailability window for Foxx services on coordinator
  startup for the initial requests to Foxx apps until the app propagation 
  has completed.
  
  When not using Foxx, this option should be set to `false` (default) to 
  benefit from a faster coordinator startup.
  Deployments relying on Foxx apps being available as soon as a coordinator 
  is integrated or responding should set this option to `true`.
  The option only has an effect for cluster setups. 
  On single servers and in active failover mode, all Foxx apps will be 
  available from the very beginning.
  Note: ArangoDB 3.6 and 3.7 also introduced this option, but with a default
  value of `true`. ArangoDB 3.8 changes the default to `false`.

* Changed the server-side implementation of the following internal JavaScript 
  APIs to no-ops:
  * `internal.reloadAqlFunctions()`: this is a no-op function now
  * `@arangodb/actions.buildRouting()`: this is a no-op function now
  * `@arangodb/actions.routingTree`: will return an empty object
  * `@arangodb/actions.routingList`: will return an empty object

  All the above APIs were intended to be used for internal means only. These
  APIs are deprecated now and will be removed in ArangoDB v3.9.

* Instead of failing to connect to INADDR_ANY refuse it as a parameter, with a
  descriptive error message for novice users (issue #12871).
